tests/endtoend/failure/expected/error_invalid_binary.compile.out
line 3:6 token recognition error at: '^'
error_invalid_binary.silly:3:9: error: parse error: extraneous input 'z' expecting ';'
    3 | x = y ^ z;  // Invalid binary operator
      |         ^
